<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckboxActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_widget"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="111dp" />

    <CheckBox

        android:id="@+id/cb_python"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/cb_python"/>
    <CheckBox
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/cb_java_android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_java_android"/>

    <CheckBox
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/cb_web_programming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_web_programming"/>

    <CheckBox
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/cb_ms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_ms"/>

    <CheckBox
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/cb_swift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_swift"/>

    <Button

        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:id="@+id/cb_btn_tampil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_btn_tampil"/>
</LinearLayout>