<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/foto"
        android:scaleType="fitCenter"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        app:riv_corner_radius="50dip"
        app:riv_border_width="1dip"
        app:riv_border_color="#000"
        app:riv_mutate_background="true"
        app:riv_tile_mode="clamp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dash"
            android:textStyle="bold"
            app:fontFamily="casual" />

    <Button
        android:id="@+id/button_page_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClickBtnCheckbox"

        android:text="@string/dash_btn_checkbox" />

    <Button
        android:id="@+id/button_page_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClickBtnRadio"
        android:text="@string/dash_btn_radio" />

    <Button
        android:id="@+id/button_page_formulir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClickBtnFormulir"
        android:text="@string/dash_btn_formfill" />

    <Button
        android:id="@+id/button_page_kalkulator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClickBtnKalkulator"
        android:text="@string/dash_btn_kalkulator" />

    <Button
        android:id="@+id/button_page_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClickBtnLogout"
        android:text="@string/dash_btn_logout" />

</LinearLayout>